--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 Django==2.2.6
+django-crontab==0.7.1
 django-filter==2.2.0
 djangorestframework==3.10.3
 dlib==19.18.0
